# motrix-plus

./: .gitignore  LICENSE  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: prepare-release-metadata.mjs
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/: switch.tsx  tabs.tsx
src/lib/: api.ts  constants.ts  format.ts  path-shim.ts  task.ts  text.ts  types.ts
src/styles/: globals.css
src/types/: parse-torrent.d.ts
